package Spore;

import Effect.Effect;

public class ClawParalyzingSpore extends Spore{
    
    
    public Effect getEffect(){
        
        return effect;
    }

    
}
