@startuml spore

Entity <|-- Spore

abstract class Spore{
    nutrition : Integer

    getEffect() : abstract Effect
}

Spore <|--SlowingSpore
class SlowingSpore{
    getEffect() : Effect
}

Spore <|--SpeedingSpore
class SpeedingSpore{
    getEffect() : Effect
}

Spore <|--ParalyzingSpore
class ParalyzingSpore{
    getEffect() : Effect
}

Spore <|--ClawParalyzingSpore
class ClawParalyzingSpore{
    getEffect() : Effect
}
@enduml	